# neonrvm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  example.c  example.py  neonrvm-config.cmake  neonrvm.c  neonrvm.h  pyproject.toml
docs/: 404.html  building.html  data.html  design_matrix.html  future.html  index.html  introduction.html  license.html  predict.html  print.html  reference.html  searchindex.js  searchindex.json  training_cache.html  training_model.html  training_parameters.html  training_results.html  using.html
docs_src/: README.md  book.toml
docs_src/src/: SUMMARY.md  building.md  data.md  design_matrix.md  future.md  introduction.md  license.md  predict.md  reference.md  training_cache.md  training_model.md  training_parameters.md  training_results.md  using.md
neonrvm/: __init__.py
